kubernetes/catalog/pairdrop/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pairdrop
  namespace: pairdrop
  labels:
    app.kubernetes.io/name: pairdrop
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pairdrop.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: pairdrop
          port: 3000
  tls:
    store:
      name: default
      namespace: traefik
